--- a/styles.css
+++ b/styles.css
@@ -199,3 +199,26 @@ svg {
         transform: translateY(3rem) scale(0.2);
     }
 }
+
+.loader{
+    position: fixed;
+    bottom: 10px;
+    width: 300px;
+    height: 30px;
+    border-radius: 30px;
+    border: 1px solid #de43f6;
+    transition: all 0.3s ease-in-out;
+}
+
+.loaded{
+    height: 100%;
+    width: 100%;
+    background: radial-gradient(282.91% 146.96% at 2.95% 56.2%, rgba(253, 176, 64, 0.8) 4.5%, rgba(252, 67, 91, 0.8) 20.47%, rgba(156, 0, 104,0.5) 49.38%, rgba(112, 15, 126, 0.8) 57.55%, rgba(67, 26, 137, 0.8) 63.94%, rgba(2, 0, 49, 0.8) 73.66%);
+    border-radius: 30px;
+    transition: all 0.1s ease-in-out;
+    overflow: hidden;
+    text-align: center;
+    padding: 5px;
+    color: white;
+    letter-spacing: 2px;
+}
