--- a/src/Components/Card/Card3dHoloEffect/Card3dHoloEffect.module.css
+++ b/src/Components/Card/Card3dHoloEffect/Card3dHoloEffect.module.css
@@ -47,7 +47,7 @@
   
   .card:after {
     opacity: 1;
-    background-image: url('../img/sparkles.gif'), url('../img/holo.webp'), linear-gradient(125deg, #ff008450 15%, #fca40040 30%, #ffff0030 40%, #00ff8a20 60%, #00cfff40 70%, #cc4cfa50 85%);
+    background-image: url('https://juliancallejas.github.io/age-of-dragons-optimization/img/sparkles.gif'), url('https://juliancallejas.github.io/age-of-dragons-optimization/img/holo.webp'), linear-gradient(125deg, #ff008450 15%, #fca40040 30%, #ffff0030 40%, #00ff8a20 60%, #00cfff40 70%, #cc4cfa50 85%);
     background-position: 50% 50%;
     background-size: 160%;
   }
